--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
     "yamljs": "^0.3.0"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^23.1.1",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
     "echarts": "^5.4.3",
