--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
     "echarts": "^5.4.3",
+    "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "litegraph.js": "^0.7.18",
     "lodash": "^4.17.21",
